# tweo

./: .gitignore  CLAUDE.md  README.md  sonar-project.properties
backend/: alembic.ini  pyproject.toml  tweo.db
backend/alembic/: env.py
backend/alembic/versions/: 0d7b3fac8079_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/core/domain/: enums.py  validators.py
backend/app/core/domain/entities/: __init__.py  ballot.py  collection.py  event.py  movie.py  person.py  studio.py  user.py  user_group.py  wishlist.py
backend/app/core/domain/value_objects/: __init__.py  cast_member.py  certification.py  collection_membership.py  media_links.py  ratings.py
backend/app/core/interfaces/: repositories.py
backend/app/core/telemetry/: ai_spans.py  logging.py  metrics.py  setup.py
backend/app/infrastructure/persistence/: database.py  encryption.py
backend/app/infrastructure/persistence/models/: __init__.py  base.py  event_models.py  user_models.py
backend/app/infrastructure/persistence/sqlite/: event_repository.py  user_group_repository.py  user_repository.py
backend/scripts/: reset_dev_db.py
backend/tests/integration/: conftest.py
backend/tests/integration/api/: test_health.py
backend/tests/integration/persistence/: test_user_repository.py
backend/tests/unit/domain/: test_validators.py
backend/tests/unit/domain/entities/: test_ballot.py  test_collection.py  test_event.py  test_movie.py  test_person.py  test_studio.py  test_user.py  test_user_group.py  test_wishlist.py
backend/tests/unit/domain/value_objects/: test_cast_member.py  (+4 more)
backend/tests/unit/telemetry/: test_ai_spans.py  test_logging.py
(+14 files in other folders)
